# desktop-assistant-v2

./: .editorconfig  .gitignore  CMakeLists.txt  DEVELOPMENT_SETUP.md  Directory.Build.props  SmartAssistant.sln  build.ps1  vcpkg.json  verify_environment.ps1
.github/workflows/: blank.yml  windows-build.yml
SmartAssistant.Core/: CMakeLists.txt  CMakeSettings.json  SmartAssistant.Core.vcxproj  vcpkg.json
SmartAssistant.Core/include/: AIService.h  ApiClient.h  AuthenticationManager.h  Common.h  Configuration.h  CoreAPI.h  CryptoService.h  DocumentService.h  FileTransferManager.h  NetworkService.h  NotificationService.h  SystemControl.h
SmartAssistant.Core/src/: AIService.cpp  ApiClient.cpp  AuthenticationManager.cpp  Configuration.cpp  CoreAPI.cpp  CryptoService.cpp  Database.cpp  DocumentService.cpp  FileTransferManager.cpp  NetworkService.cpp  NotificationService.cpp  SystemControl.cpp
SmartAssistant.Core/tests/: AIServiceTests.cpp  ApiIntegrationTests.cpp  CMakeLists.txt  CoreAPITests.cpp  DocumentServiceTests.cpp  FileTransferTests.cpp  NetworkFeaturesTests.cpp  NetworkServiceTests.cpp  SmartFeaturesTests.cpp
SmartAssistant.UI/: App.config  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SmartAssistant.UI.csproj  app.manifest
SmartAssistant.UI.Tests/: SmartAssistant.UI.Tests.csproj  UITests.cs
SmartAssistant.UI/Commands/: RelayCommand.cs
SmartAssistant.UI/Properties/: AssemblyInfo.cs
SmartAssistant.UI/Services/: ApiService.cs  AuthenticationService.cs  ConfigurationService.cs  FileTransferService.cs
SmartAssistant.UI/ViewModels/: ChatViewModel.cs  DocumentViewModel.cs  FileTransferViewModel.cs  MainViewModel.cs
SmartAssistant.UI/Views/: ChatWindow.xaml  ChatWindow.xaml.cs  DocumentPreviewWindow.xaml  DocumentPreviewWindow.xaml.cs  DocumentWindow.xaml  DocumentWindow.xaml.cs  FileTransferDialog.xaml  FileTransferDialog.xaml.cs  FriendRequestDialog.xaml  FriendRequestDialog.xaml.cs  ShareDocumentDialog.xaml  ShareDocumentDialog.xaml.cs  VersionHistoryDialog.xaml  VersionHistoryDialog.xaml.cs
backend/: .env  docker-compose.yml  nginx.conf  requirements.txt
backend/data/: smartassistant.db
backend/src/: ai_service.py  main.py
backend/ssl/: server.crt  server.key
build-win/: CMakeCache.txt
docs/: BUILD.md
flutter/: Dockerfile  pubspec.yaml  test_environment.sh
flutter/android/: .project
flutter/lib/: main.dart
flutter/linux/runner/: my_application.cc
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/windows/runner/: Runner.rc
installer/: License.rtf  Product.wxs  build_installer.ps1
package/: README.md  package.ps1
setup/: setup.ps1  verify_installation.ps1
smart-assistant/: docker-compose.yml  main.dart  pubspec.yaml  run_container.sh  todo.txt
smart-assistant/android/: .project
smart-assistant/android/app/: build.gradle
smart-assistant/android/app/src/main/kotlin/com/example/smart_assistant/: MainActivity.kt
smart-assistant/ios/Runner.xcodeproj/: project.pbxproj
smart-assistant/lib/: main.dart
smart-assistant/lib/models/: document.dart  message.dart  user.dart
smart-assistant/lib/screens/: chat_screen.dart  document_screen.dart  file_transfer_screen.dart
smart-assistant/lib/services/: ai_service.dart  command_processor.dart  document_service.dart  file_service.dart  user_service.dart
smart-assistant/lib/widgets/: chat_message.dart  document_preview.dart  file_list.dart  user_list.dart
smart-assistant/linux/: my_application.cc
smart-assistant/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
smart-assistant/test/: ai_service_test.dart  chat_screen_test.dart  command_processor_test.dart  integration_test.dart  service_test.dart  widget_test.dart
